<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_act_main"
    android:padding="@dimen/padding_default"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_country_flags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:backgroundTint="@color/background_default_btn"
        android:gravity="center|left"
        android:text="@string/btn_country_flags_text"
        app:cornerRadius="@dimen/corner_radius_btn_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_picture_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default_half"
        android:backgroundTint="@color/background_default_btn"
        android:gravity="center|left"
        android:text="@string/text_btn_picture_glide_activity"
        app:cornerRadius="@dimen/corner_radius_btn_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_country_flags"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_picture_android_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default_half"
        android:backgroundTint="@color/background_default_btn"
        android:gravity="center|left"
        android:text="@string/text_btn_picture_android_activity"
        app:cornerRadius="@dimen/corner_radius_btn_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_picture_activity"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>